Replace collector with toList() method.